OI-70 Fixed the CSS styles for private activity block, changed the visibility of blocks, removed unneeded block. Fixed view condition.

--- a/themes/openideal_theme/scss/components/_message.scss
+++ b/themes/openideal_theme/scss/components/_message.scss
@@ -156,7 +156,7 @@
 }
 
 .block-views-blockpublic-activity-public-activity-block,
-.block-openideal-personal-activity-stream-block {
+.block-views-blockpublic-activity-personalized-activity-block {
   padding: 0 27px;
   width: 100%;
   margin-top: 52px;
